# whisper-jax

./: .gitignore  COMPATIBILITY.md  IMPLEMENTATION.md  README.md  README_NNX.md  SUMMARY.md  __init__.py  example_usage.py  noxfile.py  pyproject.toml  test_compatibility.py  weight_loader.py  whisper_nnx.py
examples/: clean_audio.py  clean_audio_server.py  compare_implementations.py  demo_server.py  example_usage.py  sample.txt  word_timestamps.py
examples/static/: clean_audio.html  index.html
samples/: sample.m4a
src/whisper_jax/: __init__.py  alignment.py  model.py  pipeline.py  processor.py  weight_loader.py
src/whisper_jax/core/: __init__.py  audio.py  decode.py
src/whisper_jax/utils/: __init__.py  audio_io.py  dtw.py  tokenizer.py
src/whisper_nnx/: __init__.py  model.py  weight_loader.py
