[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whisper-jax"
version = "0.1.0"
description = "Pure JAX implementation of OpenAI's Whisper using Flax NNX"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Mario Geiger" },
]
keywords = [
    "jax",
    "flax",
    "whisper",
    "speech-recognition",
    "asr",
    "deep-learning",
    "machine-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "flax>=0.8.0",
]

[project.optional-dependencies]
weights = [
    "huggingface_hub>=0.20.0",
    "safetensors>=0.4.0",
]
alignment = [
    "numba>=0.58.0",
    "scipy>=1.10.0",
    "webrtcvad>=2.0.10",
    "soundfile>=0.12.0",
    "setuptools",  # Required by webrtcvad for pkg_resources
]
demo = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "python-multipart>=0.0.6",
    "whisper-jax[weights]",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "nox>=2023.4.22",
]
all = [
    "whisper-jax[weights,alignment,demo,dev]",
]

[project.urls]
Homepage = "https://github.com/mariogeiger/whisper-jax"
Repository = "https://github.com/mariogeiger/whisper-jax"
Issues = "https://github.com/mariogeiger/whisper-jax/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/whisper_jax"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/examples",
    "/README.md",
]

[tool.hatch.envs.default]
features = ["dev", "weights"]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
lint = "ruff check {args:.}"
format = "ruff format {args:.}"
typecheck = "mypy src/whisper_jax"

[tool.hatch.envs.cuda]
features = ["dev", "weights"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["whisper_jax"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "jax.*",
    "flax.*",
    "huggingface_hub.*",
    "safetensors.*",
    "numba.*",
    "scipy.*",
    "webrtcvad.*",
    "soundfile.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/whisper_jax"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
